syntax = "proto3";

option java_multiple_files = false;
option java_package = "tansun.creditx.bts.service.grpc.impl";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc hello(HelloRequest) returns(HelloResponse) {};
}

message HelloRequest {
  string msg = 1;
}

message HelloResponse {
  string result = 1;
}